--- a/style.css
+++ b/style.css
@@ -46,83 +46,63 @@ input[type="text"] {
     margin: 2px 0;
 }
 
-/* Loader */
-/* From Uiverse.io by SchawnnahJ */
+/* From Uiverse.io by satyamchaudharydev */
 .loader {
-    position: relative;
-    width: 2.5em;
-    height: 2.5em;
-    transform: rotate(165deg);
-    transition: 0.5s;
-}
-
-.loader:before,
-.loader:after {
-    content: "";
     position: absolute;
     top: 50%;
     left: 50%;
-    display: block;
-    width: 0.5em;
-    height: 0.5em;
-    border-radius: 0.25em;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0.5);
+    width: 60px;
 }
 
 .loader:before {
-    animation: before8 2s infinite;
+    content: "";
+    display: block;
+    padding-top: 100%;
 }
 
-.loader:after {
-    animation: after6 2s infinite;
-}
-
-@keyframes before8 {
-    0% {
-        width: 0.5em;
-        box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-
-    35% {
-        width: 2.5em;
-        box-shadow: 0 -0.5em rgba(225, 20, 98, 0.75), 0 0.5em rgba(111, 202, 220, 0.75);
-    }
-
-    70% {
-        width: 0.5em;
-        box-shadow: -1em -0.5em rgba(225, 20, 98, 0.75), 1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-
-    100% {
-        box-shadow: 1em -0.5em rgba(225, 20, 98, 0.75), -1em 0.5em rgba(111, 202, 220, 0.75);
-    }
-}
-
-@keyframes after6 {
-    0% {
-        height: 0.5em;
-        box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
-    }
-
-    35% {
-        height: 2.5em;
-        box-shadow: 0.5em 0 rgba(61, 184, 143, 0.75), -0.5em 0 rgba(233, 169, 32, 0.75);
-    }
-
-    70% {
-        height: 0.5em;
-        box-shadow: 0.5em -1em rgba(61, 184, 143, 0.75), -0.5em 1em rgba(233, 169, 32, 0.75);
-    }
-
-    100% {
-        box-shadow: 0.5em 1em rgba(61, 184, 143, 0.75), -0.5em -1em rgba(233, 169, 32, 0.75);
-    }
-}
-
-.loader {
+.circular {
+    animation: rotate73451 2s linear infinite;
+    height: 100%;
+    transform-origin: center center;
+    width: 100%;
     position: absolute;
-    top: calc(50% - 1.25em);
-    left: calc(50% - 1.25em);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.path {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    animation: dash0175 1.5s ease-in-out infinite;
+    stroke-linecap: round;
+    stroke: white
+}
+
+@keyframes rotate73451 {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash0175 {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
 }
 
 /* From Uiverse.io by mrhyddenn */
@@ -135,6 +115,7 @@ input[type="text"] {
     justify-items: space-between;
     align-items: center;
     width: 100%;
+    cursor: pointer;
 }
 
 .check:before {
@@ -234,6 +215,7 @@ input[type="text"] {
     overflow: auto;
     display: flex;
     flex-direction: column;
+    visibility: hidden;
 }
 
 ::-webkit-scrollbar {
@@ -256,7 +238,7 @@ input[type="text"] {
     backdrop-filter: blur(5px);
     color: white;
     transition: 300ms;
-    opacity: 0;
+    opacity: 0.2;
     width: auto !important;
 }
 
@@ -268,6 +250,7 @@ input[type="text"] {
 
 .active {
     transform: translateX(0);
+    visibility: visible;
 }
 
 .active2 {
@@ -431,7 +414,7 @@ span {
     z-index: -1;
     backdrop-filter: blur(5px);
     transform: skewX(-20deg);
-    border-right: 4px solid white;
+    border-right: 5px solid white;
     transition: 1s;
 }
 
@@ -471,7 +454,7 @@ span {
     z-index: -1;
     backdrop-filter: blur(5px);
     transform: skewX(-20deg);
-    border-right: 4px solid white;
+    border-right: 5px solid white;
     transition: 1s;
 }
 
@@ -504,7 +487,6 @@ span {
     transition: 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     padding: 5px 20px 5px 10px;
     animation: slidein2 forwards 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
-    /* transform: translateX(-500px); */
 }
 
 .search::before {
@@ -512,20 +494,20 @@ span {
     position: absolute;
     top: 0;
     left: -10%;
-    width: 110%;
+    width: 111%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: -1;
     backdrop-filter: blur(5px);
     transform: skewX(-20deg);
-    border-right: 4px solid white;
+    border-right: 5px solid white;
     border-left: 4px solid white;
     transition: 1s;
 }
 
 @keyframes slidein2 {
     from {
-        transform: translateX(-110%);
+        transform: translateX(-800px);
     }
 
     to {
@@ -533,14 +515,14 @@ span {
     }
 }
 
-#search{
+#search {
     background: transparent;
     margin: 0;
     width: 220px;
     transition: 0.5s;
 }
 
-#search-btn{
+#search-btn {
     background: transparent;
     display: flex;
     width: auto;
@@ -551,7 +533,7 @@ span {
     opacity: 0.5;
 }
 
-#clear{
+#clear {
     background: transparent;
     right: 0;
     top: 50%;
@@ -559,21 +541,6 @@ span {
     position: absolute;
     width: auto;
     display: none;
-}
-
-.searching{
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%) !important;
-    transition: 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-}
-
-.searching #search{
-    font-size: 1em;
-}
-
-.searching::before{
-    left: -6%;
 }
 
 .icon {
