--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     font-family: 'Saira', serif;
     font-style: normal;
     user-select: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-size: 100%;
 }
 
 button {
@@ -53,6 +55,7 @@ input[type="text"] {
     left: 50%;
     transform: translate(-50%, -50%) scale(0.5);
     width: 60px;
+    transition: 1s;
 }
 
 .loader:before {
@@ -271,7 +274,7 @@ input[type="range"]:hover {
 }
 
 .tab-title {
-    font-size: 1em;
+    font-size: 1zem;
     text-align: center;
     padding: 0;
     background-color: black;
@@ -438,7 +441,7 @@ span {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 20px 5px 10px;
+    padding: 5px 20px 5px 15px;
     animation: slidein1 forwards 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
     transform: translateX(-500px);
 }
@@ -518,8 +521,9 @@ span {
 #search {
     background: transparent;
     margin: 0;
-    width: 220px;
+    width: 230px;
     transition: 0.5s;
+    font-size: .8em;
 }
 
 #search-btn {
@@ -558,6 +562,7 @@ span {
 
 .temp {
     font-size: 1.8em !important;
+    margin: 0 10px 0 0 !important;
 }
 
 .date-info p {
