--- a/style.css
+++ b/style.css
@@ -593,3 +593,10 @@ span {
 .localimage {
     display: none;
 }
+
+hr{
+    border: 0;
+    height: 1px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 5px 0;
+}
