--- a/style.css
+++ b/style.css
@@ -56,6 +56,8 @@ input[type="text"] {
     transform: translate(-50%, -50%) scale(0.5);
     width: 60px;
     transition: 0.5s;
+    background-color: #00000060;
+    border-radius: 50%;
 }
 
 .loader:before {
@@ -192,10 +194,36 @@ input[type="text"] {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    background-color: transparent;
     transition: all 1.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     opacity: 0;
     filter: blur(0px);
 }
+
+.background_blur {
+    position: absolute;
+    top: 0;
+    /* filter: blur(5px); */
+    transition: all 1.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+    opacity: 0.3;
+    background-size: cover;
+    background-position: center 50%;
+    width: 100%;
+    height: 100%;
+    animation: movingupdwon 20s alternate infinite ease-in-out;
+    animation-play-state: paused;
+}
+
+@keyframes movingupdwon {
+    0% {
+        background-position: center 0%;
+    }
+
+    100% {
+        background-position: center 100%;
+    }
+}
+
 
 .settings {
     position: absolute;
@@ -249,6 +277,11 @@ input[type="text"] {
     transform: rotate(90deg);
     background-color: rgba(0, 0, 0, 0.7);
     opacity: 1;
+}
+
+.opt-btn:active {
+    transform: scale(0.9) rotate(90deg);
+    transition: 0s !important;
 }
 
 .active {
@@ -407,6 +440,7 @@ span {
     padding: 5px 20px 5px 10px;
     animation: slidein forwards 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
     transform: translateX(-500px);
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
 .date-info::before {
@@ -421,7 +455,16 @@ span {
     backdrop-filter: blur(5px);
     transform: skewX(-20deg);
     border-right: 5px solid white;
-    transition: 1s;
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.date-info:hover {
+    position: absolute;
+    left: 10px;
+}
+
+.date-info:hover::before {
+    background-color: rgba(66, 66, 66, 0.5);
 }
 
 @keyframes slidein {
@@ -447,6 +490,7 @@ span {
     padding: 5px 20px 5px 15px;
     animation: slidein1 forwards 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
     transform: translateX(-500px);
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
 .weather-info::before {
@@ -461,7 +505,16 @@ span {
     backdrop-filter: blur(5px);
     transform: skewX(-20deg);
     border-right: 5px solid white;
-    transition: 1s;
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.weather-info:hover {
+    position: absolute;
+    left: 10px;
+}
+
+.weather-info:hover::before {
+    background-color: rgba(66, 66, 66, 0.5);
 }
 
 @keyframes slidein1 {
@@ -509,6 +562,16 @@ span {
     border-right: 5px solid white;
     border-left: 4px solid white;
     transition: 1s;
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.search:hover {
+    position: absolute;
+    left: 10px;
+}
+
+.search:hover::before {
+    background-color: rgba(66, 66, 66, 0.5);
 }
 
 @keyframes slidein2 {
@@ -594,9 +657,26 @@ span {
     display: none;
 }
 
-hr{
+hr {
     border: 0;
     height: 1px;
     background: rgba(255, 255, 255, 0.5);
     margin: 5px 0;
+}
+
+.settings::-webkit-scrollbar {
+    width: 3px;
+}
+
+.settings::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+}
+
+.settings::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.picsum {
+    display: none;
 }
