--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ input[type="text"] {
     /* Adjusted for top margin */
     right: 10px;
     /* Adjusted for right margin */
-    z-index: 100;
+    z-index: 98;
     width: calc(250px - 20px);
     /* Adjusted for left and right margins */
     height: calc(100vh - 20px);
@@ -259,7 +259,7 @@ input[type="text"] {
     right: 0;
     border: none;
     padding: 10px;
-    z-index: 101;
+    z-index: 99;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 50%;
     margin: 10px;
@@ -679,4 +679,52 @@ hr {
 
 .picsum {
     display: none;
+}
+
+.alert-box-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(5px);
+    z-index: 100;
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+    display: none;
+}
+
+.alert-box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 300px;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 5px 4px 5px;
+    border: 1px solid black;
+    color: white;
+    z-index: 101;
+    transform: translate(-50%, -50%) scale(0.7);
+    opacity: 0;
+    transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+}
+
+.alert-title {
+    font-size: 1.2em;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    background-color: #000;
+}
+
+#alert-content {
+    font-size: 0.9em;
+    text-align: left;
+    padding: 5px;
+}
+
+.alert-box p {
+    margin: 0;
+    padding: 0;
 }
