--- a/style.css
+++ b/style.css
@@ -48,10 +48,23 @@ input[type="text"] {
     background-color: rgba(0, 0, 0, 0.4);
     border: none;
     color: white;
-    outline: none;
     padding: 5px 8px;
     margin: 2px 0;
     border-radius: 5px;
+    font-size: 0.9em;
+    outline: none;
+}
+
+input[type="range"] {
+    width: 100%;
+    height: 5px;
+    margin: 8px 0;
+    accent-color: white;
+    transition: 300ms;
+}
+
+input[type="range"]:hover {
+    cursor: pointer;
 }
 
 /* From Uiverse.io by satyamchaudharydev */
@@ -228,9 +241,8 @@ input[type="text"] {
     /* Adjusted for left and right margins */
     height: calc(100vh - 20px);
     /* Adjusted for top and bottom margins */
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: transparent;
     box-sizing: border-box;
-    padding: 2.5px 5px;
     backdrop-filter: blur(5px);
     transform: translateX(250px);
     transition: 0.8s cubic-bezier(0.190, 1.000, 0.220, 1.000);
@@ -239,10 +251,11 @@ input[type="text"] {
     display: flex;
     flex-direction: column;
     visibility: hidden;
+    border-radius: 8px;
 }
 
-::-webkit-scrollbar {
-    width: 0px;
+.settings::-webkit-scrollbar{
+    width: 0;
 }
 
 .opt-btn {
@@ -277,7 +290,7 @@ input[type="text"] {
 }
 
 .active {
-    transform: translateX(0);
+    transform: translateX(0px);
     visibility: visible;
 }
 
@@ -285,35 +298,26 @@ input[type="text"] {
     opacity: 1;
 }
 
-
-input[type="range"] {
-    width: 100%;
-    height: 5px;
-    margin: 10px 0;
-    accent-color: white;
-    transition: 300ms;
-}
-
-input[type="range"]:hover {
-    cursor: pointer;
+.opt-btn-con{
+    transition: 0.8s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
 
 .tab-title {
     font-size: 1em;
     text-align: center;
-    padding: 1px 0;
+    padding: 3px 0;
     background-color: black;
-    border-radius: 5px 5px 0 0;
+    border-radius: 8px 8px 0 0;
 }
 
 .setting-tabs {
-    margin: 2.5px 0 2.5px 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
+    margin: 3px 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 8px;
 }
 
 .tab-content {
-    padding: 5px 10px;
+    padding: 8px 10px;
     display: flex;
     flex-direction: column;
 }
@@ -658,19 +662,6 @@ hr {
     margin: 5px 0;
 }
 
-.settings::-webkit-scrollbar {
-    width: 3px;
-}
-
-.settings::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
-}
-
-.settings::-webkit-scrollbar-track {
-    background: transparent;
-}
-
 .picsum {
     display: none;
 }
@@ -729,4 +720,9 @@ hr {
 
 hr{
     opacity: 0.5;
+}
+
+.slider{
+    display: flex;
+    flex-direction: column;
 }
