--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-style: normal;
     user-select: none;
     box-sizing: border-box;
+    -webkit-user-drag: none;
 }
 
 body {
@@ -65,6 +66,10 @@ input[type="range"] {
 
 input[type="range"]:hover {
     cursor: pointer;
+}
+
+svg{
+    transition: 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
 }
 
 /* From Uiverse.io by satyamchaudharydev */
@@ -279,13 +284,12 @@ input[type="range"]:hover {
 }
 
 .opt-btn:hover {
-    transform: rotate(90deg);
     background-color: rgba(0, 0, 0, 0.7);
     opacity: 1;
 }
 
 .opt-btn:active {
-    transform: scale(0.9) rotate(90deg);
+    transform: scale(0.9);
     transition: 0s !important;
 }
 
@@ -399,7 +403,7 @@ input[type="range"]:hover {
 
 .error-display {
     display: none;
-    background-color: rgba(255, 0, 0, 0.5);
+    background-color: rgb(141, 0, 0);
 }
 
 #error-text {
@@ -461,10 +465,6 @@ span {
     left: 10px;
 }
 
-.date-info:hover::before {
-    background-color: rgba(66, 66, 66, 0.5);
-}
-
 @keyframes slidein {
     from {
         transform: translateX(-1000px);
@@ -511,10 +511,6 @@ span {
     left: 10px;
 }
 
-.weather-info:hover::before {
-    background-color: rgba(66, 66, 66, 0.5);
-}
-
 @keyframes slidein1 {
     from {
         transform: translateX(-500px);
@@ -539,10 +535,10 @@ span {
     color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     transition: 0.5s cubic-bezier(0.190, 1.000, 0.220, 1.000);
-    padding: 5px 20px 5px 10px;
+    padding: 5px 20px 5px 15px;
     animation: slidein2 forwards 1.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
 
@@ -566,10 +562,6 @@ span {
 .search:hover {
     position: absolute;
     left: 10px;
-}
-
-.search:hover::before {
-    background-color: rgba(66, 66, 66, 0.5);
 }
 
 @keyframes slidein2 {
@@ -603,12 +595,15 @@ span {
 
 #clear {
     background: transparent;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%) scale(0.7);
-    position: absolute;
-    width: auto;
+    width: 40px;
+    height: 40px;
     display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+#clear:hover {
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .icon {
@@ -641,10 +636,6 @@ span {
 .clock {
     font-size: 2.1em;
     font-weight: 500;
-}
-
-#lunar-calendar {
-    font-size: 0.9em;
 }
 
 .API-handle {
