--- a/style.css
+++ b/style.css
@@ -724,3 +724,13 @@ hr{
     padding: 0;
     margin: 0;
 }
+
+#weather-error{
+    font-size: 0.8em;
+    width: 100%;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    color: rgb(255, 92, 74);
+    display: none;
+}
