--- a/style.css
+++ b/style.css
@@ -31,7 +31,8 @@ button:hover {
 }
 
 button:active {
-    transform: scale(0.95);
+    transition: 0s;
+    transform: scale(0.96);
 }
 
 button:disabled {
@@ -187,6 +188,10 @@ svg {
     opacity: 1;
 }
 
+.shown{
+    display: block !important;
+}
+
 .settings {
     position: absolute;
     top: 10px;
@@ -322,13 +327,14 @@ svg {
     position: absolute;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(100px);
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(40px);
     width: 100%;
     height: 100vh;
     z-index: 3;
-    transition: 500ms cubic-bezier(0.190, 1.000, 0.220, 1.000);
-    transform: scaleY(0);
+    transition: 300ms;
+    visibility: hidden;
+    opacity: 0;
 }
 
 .safemode-box p {
@@ -342,8 +348,9 @@ svg {
     transform: translateX(-50%);
 }
 
-.shown {
-    transform: scaleY(1);
+.safemode-enabled {
+    opacity: 1;
+    visibility: visible;
 }
 
 .error-display {
@@ -638,7 +645,7 @@ hr {
     font-size: 1.2em;
     text-align: center;
     margin: 0;
-    padding: 0;
+    padding: 10px 0;
     background-color: #000;
 }
 
@@ -692,4 +699,41 @@ hr {
 
 .search-active #clear {
     display: flex;
+}
+
+
+.loader {
+    display: block;
+    --height-of-loader: 4px;
+    --loader-color: white;
+    width: 100%;
+    height: var(--height-of-loader);
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+
+.loader::before {
+    content: "";
+    position: absolute;
+    background: var(--loader-color);
+    top: 0;
+    left: 0;
+    width: 0%;
+    height: 100%;
+    border-radius: 30px;
+    animation: moving 1s ease-in-out infinite;
+    ;
+}
+
+@keyframes moving {
+    50% {
+        width: 100%;
+    }
+
+    100% {
+        width: 0;
+        right: 0;
+        left: unset;
+    }
 }
