--- a/style.css
+++ b/style.css
@@ -184,12 +184,8 @@ svg {
     width: 100%;
     height: 100%;
     background-color: rgb(0, 0, 0);
-    transition: 0.8s cubic-bezier(0.190, 1.000, 0.220, 1.000);
+    transition: 1s cubic-bezier(0.190, 1.000, 0.220, 1.000);
     opacity: 1;
-}
-
-.shown{
-    display: block !important;
 }
 
 .settings {
@@ -276,14 +272,17 @@ svg {
 }
 
 
-.choose-API {
+.choose-API,
+.choose-ui {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px 10px;
 }
 
-.API-name {
+
+.API-name,
+.ui-name {
     padding: 0;
     margin: 0;
 }
@@ -293,7 +292,12 @@ svg {
     text-align: left;
 }
 
-.API-select-box {
+.shown {
+    display: block !important;
+}
+
+.API-select-box,
+.ui-select-box {
     display: none;
     max-height: 200px;
     overflow: auto;
@@ -331,10 +335,8 @@ svg {
     backdrop-filter: blur(40px);
     width: 100%;
     height: 100vh;
-    z-index: 3;
-    transition: 300ms;
-    visibility: hidden;
-    opacity: 0;
+    z-index: 0;
+    display: none;
 }
 
 .safemode-box p {
@@ -349,8 +351,7 @@ svg {
 }
 
 .safemode-enabled {
-    opacity: 1;
-    visibility: visible;
+    display: block;
 }
 
 .error-display {
@@ -370,12 +371,12 @@ svg {
     user-select: text;
 }
 
-#error-text::selection{
+#error-text::selection {
     color: white;
     background-color: black;
 }
 
-.select-API{
+.select-API {
     margin-bottom: 5px;
 }
 
@@ -619,8 +620,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.7);
     z-index: 100;
     transition: 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000);
     display: none;
@@ -700,7 +700,6 @@ hr {
 .search-active #clear {
     display: flex;
 }
-
 
 .loader {
     display: block;
